--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,5 @@
+build: false
+
 environment:
   matrix:
     - PYTHON: "C:\\Python33"
@@ -19,7 +21,7 @@ environment:
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
-build_script:
+test_script:
   - pushd test
   - %PYTHON% test.py
   - popd
