--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ environment:
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
-test_script:
+build_script:
   - pushd test
-  - %PYTHON% test.py
+  - python3 test.py
   - popd
