--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ init:
 
 install:
   - SET PATH=%PYTHON%;%path%
-  - SET PATH=%PYTHON3%;%path%
+  - SET PATH=%PYTHON3%;%python%
 
 build_script:
   - ps: cp C:\python34\python.exe C:\python34\python3.exe
