set env path for python3

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
   - SET PATH=%PYTHON%;%path%
 
 build_script:
-  - ps: set python3 C:\Python34
+  - ps: set python3 "C:\Python34"
   - "python --version"
   - "pushd test"
   - "python test.py"
