--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,8 @@ install:
   - SET PATH=%PYTHON%;%path%
 
 build_script:
-  - ps: set python3 "C:\Python34"
+  - 'set python3 "C:\Python34\python.exe"'
+  - "python3 --version"
   - "python --version"
   - "pushd test"
   - "python test.py"
