--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ init:
 
 install:
   - SET PATH=%PYTHON%;%path%
-  - mklink /H C:\Python34\python3.exe C:\Python34\python.exe
+  - mklink /D C:\Python34\python3.exe C:\Python34\python.exe
   - SET PATH=%PATH%;C:\Python34\python3.exe
 
 build_script:
