--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
   - SET PATH=%PATH%;C:\Python34\python3.exe
 
 build_script:
+  - mklink /D python3 C:\Python34\python.exe
   - "python3 --version"
   - "python --version"
   - "pushd test"
