--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,12 +12,11 @@ init:
 install:
   - SET PATH=%PYTHON%;%path%
   - mklink /D python3 C:\Python34\python.exe
-  - SET PATH=%PATH%;C:\Python34\python3.exe
+  #- SET PATH=%PATH%;C:\Python34\python3.exe
 
 build_script:
-  - mklink /D python3 C:\Python34\python.exe
-  - "python3 --version"
-  - "python --version"
-  - "pushd test"
-  - "python test.py"
-  - "popd"
+  - python3 --version
+  - python --version
+  - pushd test
+  - python test.py
+  - popd
